--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                 </div>
               </div>
               <div class="place-item">
-                <img src="./assets/img/newyork.jpg" alt="" class="place-img" />
+                <img src="./assets/img/paris.jpg" alt="" class="place-img" />
                 <div class="place-body">
-                  <h3 class="place-heading">New York</h3>
+                  <h3 class="place-heading">Paris</h3>
                   <p class="place-time">Fri 27 Nov 2016</p>
                   <p class="place-des">
                     Praesent tincidunt sed tellus ut rutrum sed vitae justo.
@@ -127,9 +127,9 @@
                 </div>
               </div>
               <div class="place-item">
-                <img src="./assets/img/newyork.jpg" alt="" class="place-img" />
+                <img src="./assets/img/sanfran.jpg" alt="" class="place-img" />
                 <div class="place-body">
-                  <h3 class="place-heading">New York</h3>
+                  <h3 class="place-heading">San Francisco</h3>
                   <p class="place-time">Fri 27 Nov 2016</p>
                   <p class="place-des">
                     Praesent tincidunt sed tellus ut rutrum sed vitae justo.
@@ -146,9 +146,9 @@
           <div class="contact">
             <div class="infor">
               <div class="my-infor">
-                <p><i class="ti-location-pin"></i>Chicago, US</p>
-                <p><i class="ti-headphone-alt"></i>Phone: +00 151515</p>
-                <p><i class="ti-email"></i>Email: mail@mail.com</p>
+                <p><i class="ti-location-pin"></i>Đông Hòa, Phú Yên</p>
+                <p><i class="ti-headphone-alt"></i>Phone: 0329028367</p>
+                <p><i class="ti-email"></i>Email: Duyvu2612003@gmail.com</p>
               </div>
               <div class="user-infor"></div>
             </div>
