--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>PSG Team(VJr)</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/responsive.css" />
+    <link
+      rel="icon"
+      href="./assets/img/Paris_Saint-Germain_F.C..svg"
+      type="image/x-icon"
+    />
     <link
       rel="stylesheet"
       href="./assets/icons/themify-icons/themify-icons.css"
@@ -16,19 +22,19 @@
       <div id="header">
         <!--BEGIN NAV-->
         <ul id="nav">
-          <li><a href="">Home</a></li>
-          <li><a href="">Band</a></li>
-          <li><a href="">Tour</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#band">Team</a></li>
+          <li><a href="#tour">Tour</a></li>
+          <li><a href="#contact">Contact</a></li>
           <li>
             <a href="#">
               More
               <i class="nav-arrow-down ti-angle-down"></i>
             </a>
             <ul class="subnav">
-              <li><a href="">Merchandise</a></li>
-              <li><a href="">Extras</a></li>
-              <li><a href="">Media</a></li>
+              <li><a href="#">Merchandise</a></li>
+              <li><a href="#">Extras</a></li>
+              <li><a href="#">Media</a></li>
             </ul>
           </li>
         </ul>
@@ -37,6 +43,9 @@
         <!--BEGIN SEARCH BUTTON-->
         <div class="search-btn">
           <i class="search-icon ti-search"></i>
+        </div>
+        <div id="mobile-menu" class="mobile-menu-btn">
+          <i class="ti-menu menu-icon"></i>
         </div>
         <!--END SEARCH BUTTON-->
       </div>
@@ -49,7 +58,7 @@
       </div>
 
       <div id="content">
-        <div class="content-section">
+        <div id="band" class="content-section">
           <h2 class="section-heading">MY FAVOURITE CLUB</h2>
           <p class="section-sub-heading">PSG</p>
           <p class="about-text">
@@ -88,7 +97,7 @@
             </div>
           </div>
         </div>
-        <div class="content-tour">
+        <div id="tour" class="content-tour">
           <div class="content-section">
             <h2 class="section-heading text-white">TOUR DATES</h2>
             <p class="section-sub-heading text-white">
@@ -108,57 +117,149 @@
                 <img src="./assets/img/newyork.jpg" alt="" class="place-img" />
                 <div class="place-body">
                   <h3 class="place-heading">New York</h3>
-                  <p class="place-time">Fri 27 Nov 2016</p>
+                  <p class="place-time">Fri 27 Nov 2022</p>
                   <p class="place-des">
                     Praesent tincidunt sed tellus ut rutrum sed vitae justo.
                   </p>
-                  <a href="#" class="place-buy-btn">Buy Tickets</a>
+                  <a href="#" class="btn">Buy Tickets</a>
                 </div>
               </div>
               <div class="place-item">
                 <img src="./assets/img/paris.jpg" alt="" class="place-img" />
                 <div class="place-body">
                   <h3 class="place-heading">Paris</h3>
-                  <p class="place-time">Fri 27 Nov 2016</p>
+                  <p class="place-time">Sar 13 Nov 2022</p>
                   <p class="place-des">
                     Praesent tincidunt sed tellus ut rutrum sed vitae justo.
                   </p>
-                  <a href="#" class="place-buy-btn">Buy Tickets</a>
+                  <a href="#" class="btn">Buy Tickets</a>
                 </div>
               </div>
               <div class="place-item">
                 <img src="./assets/img/sanfran.jpg" alt="" class="place-img" />
                 <div class="place-body">
                   <h3 class="place-heading">San Francisco</h3>
-                  <p class="place-time">Fri 27 Nov 2016</p>
+                  <p class="place-time">Mon 16 Nov 2022</p>
                   <p class="place-des">
                     Praesent tincidunt sed tellus ut rutrum sed vitae justo.
                   </p>
-                  <a href="#" class="place-buy-btn">Buy Tickets</a>
+                  <a href="#" class="btn">Buy Tickets</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="content-section">
+        <div id="contact" class="content-section">
           <h2 class="section-heading">CONTACT</h2>
           <p class="section-sub-heading">Fan? Drop a note!</p>
-          <div class="contact">
-            <div class="infor">
-              <div class="my-infor">
-                <p><i class="ti-location-pin"></i>Đông Hòa, Phú Yên</p>
-                <p><i class="ti-headphone-alt"></i>Phone: 0329028367</p>
-                <p><i class="ti-email"></i>Email: Duyvu2612003@gmail.com</p>
-              </div>
-              <div class="user-infor"></div>
+          <div class="row contact-content">
+            <div class="col col-half contact-info">
+              <p><i class="ti-location-pin"></i>Đông Hòa, Phú Yên</p>
+              <p><i class="ti-headphone-alt"></i>Phone: 0329028367</p>
+              <p><i class="ti-email"></i>Email: Duyvu2612003@gmail.com</p>
             </div>
-            <button class="send">SEND</button>
+            <div class="col col-half contact-form">
+              <form action="">
+                <div class="row name-email-1line">
+                  <div class="col col-half">
+                    <input
+                      type="text"
+                      name=""
+                      id=""
+                      required
+                      placeholder="Name"
+                      class="form-control"
+                    />
+                  </div>
+                  <div class="col col-half">
+                    <input
+                      type="email"
+                      name=""
+                      id=""
+                      required
+                      placeholder="Email"
+                      class="form-control"
+                    />
+                  </div>
+                </div>
+                <div class="row mt-8px">
+                  <div class="col col-full">
+                    <input
+                      type="text"
+                      name=""
+                      id=""
+                      required
+                      placeholder="Message"
+                      class="form-control"
+                    />
+                  </div>
+                </div>
+                <input
+                  class="btn mt-16px pull-right"
+                  type="submit"
+                  value="SEND"
+                />
+              </form>
+            </div>
           </div>
         </div>
+
+        <div class="map-section"><img src="./assets/img/map.jpg" alt="" /></div>
       </div>
       <div id="footer">
-        <a href=""></a>
+        <div class="social-list">
+          <a href="https://www.facebook.com/duyvu.2610" target="_blank"
+            ><i class="ti-facebook"></i
+          ></a>
+          <a href="https://www.instagram.com/ndvuuuujjjj/" target="_blank"
+            ><i class="ti-instagram"></i
+          ></a>
+          <a
+            href="https://www.youtube.com/channel/UCG3vf9ofOrK3iYo1NOqMpEQ"
+            target="_blank"
+            ><i class="ti-youtube"></i
+          ></a>
+          <a href="https://github.com/Duyvu2610" target="_blank"
+            ><i class="ti-github"></i
+          ></a>
+          <a href="https://soundcloud.com/duy-v-250097191" target="_blank"
+            ><i class="ti-soundcloud"></i
+          ></a>
+        </div>
+        <p class="copyright">
+          Powered by <a href="https://www.w3schools.com/">w3.css</a> (override
+          by VJr)
+        </p>
       </div>
     </div>
+    <script>
+      var header = document.getElementById("header");
+      var mobileMenu = document.getElementById("mobile-menu");
+      var headerHeight = header.clientHeight;
+      mobileMenu.onclick = function () {
+        var isClosed = header.clientHeight === headerHeight;
+        if (isClosed) {
+          header.style.height = "auto";
+        } else {
+          header.style.height = null;
+        }
+      };
+      // tu dong dong khi chon menu
+      var menuItems = document.querySelectorAll('#nav li a[href *= "#"]');
+      for (var i = 0; i < menuItems.length; i++) {
+        var menuItem = menuItems[i];
+
+        menuItem.onclick = function (event) {
+          var isParentMenu =
+            this.nextElementSibling &&
+            this.nextElementSibling.classList.contains("subnav");
+          if (!isParentMenu) {
+            header.style.height = null;
+          } else {
+            event.preventDefault();
+          }
+        };
+      }
+    </script>
   </body>
 </html>
