--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PSG Team(VJr)</title>
+    <link rel="stylesheet" href="./assets/css/grid.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/responsive.css" />
     <link
@@ -112,38 +113,65 @@
             </ul>
 
             <!--PLACES-->
-            <div class="place-list">
-              <div class="place-item">
-                <img src="./assets/img/newyork.jpg" alt="" class="place-img" />
-                <div class="place-body">
-                  <h3 class="place-heading">New York</h3>
-                  <p class="place-time">Fri 27 Nov 2022</p>
-                  <p class="place-des">
-                    Praesent tincidunt sed tellus ut rutrum sed vitae justo.
-                  </p>
-                  <a href="#" class="btn">Buy Tickets</a>
-                </div>
-              </div>
-              <div class="place-item">
-                <img src="./assets/img/paris.jpg" alt="" class="place-img" />
-                <div class="place-body">
-                  <h3 class="place-heading">Paris</h3>
-                  <p class="place-time">Sar 13 Nov 2022</p>
-                  <p class="place-des">
-                    Praesent tincidunt sed tellus ut rutrum sed vitae justo.
-                  </p>
-                  <a href="#" class="btn">Buy Tickets</a>
-                </div>
-              </div>
-              <div class="place-item">
-                <img src="./assets/img/sanfran.jpg" alt="" class="place-img" />
-                <div class="place-body">
-                  <h3 class="place-heading">San Francisco</h3>
-                  <p class="place-time">Mon 16 Nov 2022</p>
-                  <p class="place-des">
-                    Praesent tincidunt sed tellus ut rutrum sed vitae justo.
-                  </p>
-                  <a href="#" class="btn">Buy Tickets</a>
+            <div class="grid container">
+              <div class="row">
+                <div class="col l-10 l-o-1 m-10 m-o-3 c-12">
+                  <div class="row">
+                    <div class="col l-4 m-7 c-12">
+                      <div class="place-item">
+                        <img
+                          src="./assets/img/newyork.jpg"
+                          alt=""
+                          class="place-img"
+                        />
+                        <div class="place-body">
+                          <h3 class="place-heading">New York</h3>
+                          <p class="place-time">Fri 27 Nov 2022</p>
+                          <p class="place-des">
+                            Praesent tincidunt sed tellus ut rutrum sed vitae
+                            justo.
+                          </p>
+                          <a href="#" class="btn">Buy Tickets</a>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col l-4 m-7 c-12">
+                      <div class="place-item">
+                        <img
+                          src="./assets/img/newyork.jpg"
+                          alt=""
+                          class="place-img"
+                        />
+                        <div class="place-body">
+                          <h3 class="place-heading">New York</h3>
+                          <p class="place-time">Fri 27 Nov 2022</p>
+                          <p class="place-des">
+                            Praesent tincidunt sed tellus ut rutrum sed vitae
+                            justo.
+                          </p>
+                          <a href="#" class="btn">Buy Tickets</a>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col l-4 m-7 c-12">
+                      <div class="place-item">
+                        <img
+                          src="./assets/img/newyork.jpg"
+                          alt=""
+                          class="place-img"
+                        />
+                        <div class="place-body">
+                          <h3 class="place-heading">New York</h3>
+                          <p class="place-time">Fri 27 Nov 2022</p>
+                          <p class="place-des">
+                            Praesent tincidunt sed tellus ut rutrum sed vitae
+                            justo.
+                          </p>
+                          <a href="#" class="btn">Buy Tickets</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
